# cachepot

./: .gitignore  .isort.cfg  CONTRIBUTING.md  Makefile  Pipfile  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  gitignore-in.yml  happy.yml  octocov.yml  pypi-publish.yml  python-test.yml  spellcheck.yml
cachepot/: __init__.py  _version.py  _warnings.py  expire.py
cachepot/backend/: __init__.py  filesystem.py  redis.py  sqlite.py
cachepot/serializer/: __init__.py  json.py  pickle.py  str.py
cachepot/store/: __init__.py
example/: README.md  __init__.py
tests/: test_example.py  test_expire.py  test_store.py
tests/backend/: test_filesystem.py  test_redis.py  test_sqlite.py
tests/serializer/: test_json.py  test_pickle.py  test_str.py
