[project]
name = "cachepot"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []
description = "Yet another Python cache library"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/cachepot"

[project.optional-dependencies]
redis = [
    "redis",
    "types-redis",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "ruff",
    "setuptools-scm",
    "mypy",
    "redis",
    "types-redis",
]

[tool.ruff]
line-length = 79

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { "cachepot" = ["py.typed"], "*" = ["README.md, LICENSE"] }
package-dir = { "cachepot" = "cachepot" }

[tool.setuptools_scm]
write_to = "cachepot/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=cachepot --doctest-modules --cov-report=xml"
format = "ruff format cachepot"
check = [
    { cmd = "ruff check cachepot tests" },
    { cmd = "mypy cachepot tests" },
]
