[metadata]
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
name = cachepot
description = Yet another Python cache library
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/kitsuyui/cachepot
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    typing-extensions
test_suite = tests
tests_require = pytest
python_requires = >= 3.9
dev =
    pytest
    black
    isort
    flake8
    mypy

[options.extras_require]
redis = redis>=3.0

[options.package_data]
* = README.md, LICENSE
cachepot = py.typed

[flake8]
max-line-length = 100
